--- a/analysis/average_OIA.Rmd
+++ b/analysis/average_OIA.Rmd
@@ -638,7 +638,7 @@ rm(DIC_surface_trend,
 
 ## Time series stations
 
-```{r read_time_series_stations, eval=FALSE}
+```{r read_time_series_stations}
 
 
 col_names <-
@@ -663,48 +663,240 @@ TS_product_consistent <- TS_product_consistent %>%
          lat = LATITUDE,
          lon = LONGITUDE,
          depth = CTDPRS,
-         tco2 = TCARBN)
+         tco2 = TCARBN,
+         pH = PH_TOT)
 
 TS_product_consistent <- TS_product_consistent %>% 
   mutate(lon = if_else(lon < 20, lon + 360, lon))
 
 TS_product_consistent <- TS_product_consistent %>% 
-  filter(tco2 != -999)
+  pivot_longer(c(tco2,pH)) %>% 
+  filter(value != -999,
+         )
 
+TS_product_stations <- 
 TS_product_consistent %>% 
-  count(station) %>% 
-  arrange(-n)
+  group_by(station) %>%
+  summarise(lat = mean(lat),
+            lon = mean(lon),
+            n = n()) %>% 
+  ungroup()
 
+library(ggrepel)
 
-TS_product_consistent %>% 
-  distinct(station, lon, lat) %>% 
-  ggplot(aes(lon, lat, col = station)) +
-  geom_point() +
-  coord_quickmap()
+map +
+  geom_point(data = TS_product_stations,
+             aes(lon, lat, size = n),
+             alpha = 0.5,
+             col = "red") +
+  geom_label_repel(data = TS_product_stations,
+             aes(lon, lat, label = station),
+             size = 3,
+             label.padding = 0.2,
+             min.segment.length = 0)
+
 
 library(lubridate)
+
+
+TS_product_consistent <-
+  TS_product_consistent %>%
+  filter(station == "ALOHA")
 
 TS_product_consistent <-
 TS_product_consistent %>% 
   mutate(date = as.Date(as.character(date), "%Y%m%d"),
-         year = year(date))
+         year = year(date),
+         month = month(date))
 
 TS_product_consistent %>% 
-  filter(station == "ALOHA",
-         depth < 10) %>% 
-  ggplot(aes(date, tco2)) +
-  geom_point() +
-  geom_path()
+  arrange(depth) %>% 
+  mutate(n_row = row_number()) %>% 
+  ggplot(aes(n_row,depth)) +
+  geom_point() + 
+  coord_cartesian(ylim = c(100,700)) +
+  theme_bw()
+
+depth_limits <- c(0,10,30,60,85,125,175,300,450,550,650,900,1500,2500,3500,5000)
+depth_labels <- c(0,25,40,75,100,150,200,400,500,600,750,1000,2000,3000,4500)
+
+TS_product_consistent <-
+TS_product_consistent %>% 
+  mutate(depth_int = cut(depth, depth_limits, depth_labels))
+
 
 TS_product_consistent %>% 
-  filter(station == "ALOHA",
-         depth < 2000) %>% 
-  ggplot(aes(tco2, depth, col = date)) +
+  arrange(depth) %>% 
+  mutate(n_row = row_number()) %>% 
+  ggplot(aes(n_row,depth,col=depth_int)) +
+  geom_point() + 
+  theme_bw()
+
+
+TS_product_consistent %>%
+  ggplot(aes(value, depth, col = date)) +
   geom_point() +
   scale_color_viridis_c(trans = "date") +
-  scale_y_reverse()
+  scale_y_continuous(trans = trans_reverser("sqrt"),
+                     breaks = depth_limits) +
+  facet_wrap( ~ name, scales = "free_x") +
+  theme_bw() +
+  theme(panel.grid.minor = element_blank())
 
-rm(TS_product_consistent)
+
+  
+
+TS_product_consistent %>%
+  ggplot() +
+  geom_point(aes(month, value, col = date), alpha = 0.5) +
+  scale_color_viridis_c(trans = "date") +
+  facet_wrap(depth_int ~ name, scales = "free_y")
+
+TS_product_season <-
+  TS_product_consistent %>% 
+  group_by(name, month, depth_int) %>%
+  summarise(mean = mean(value),
+            median = median(value)) %>% 
+  ungroup()
+  
+
+
+TS_product_consistent %>%
+  ggplot() +
+  geom_point(aes(month, value), alpha = 0.2) +
+  geom_path(data = TS_product_season,
+            aes(month, mean, col = "Monthly mean")) +
+  geom_point(
+    data = TS_product_season,
+    aes(month, mean, fill = "Monthly mean"),
+    shape = 21,
+    size = 2
+  ) +
+  geom_point(
+    data = TS_product_season,
+    aes(month, median, fill = "Monthly median"),
+    shape = 21,
+    size = 2
+  ) +
+  geom_path(data = TS_product_season,
+            aes(month, median, col = "Monthly median")) +
+  facet_wrap(depth_int ~ name, scales = "free_y")
+
+
+
+TS_product_deseason <-
+  full_join(TS_product_consistent,
+            TS_product_season)
+  
+TS_product_deseason <-
+TS_product_deseason %>% 
+  mutate(value_deseason = value - median)
+
+TS_product_consistent %>% 
+  ggplot(aes(date, value)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE) +
+  facet_wrap(depth_int ~ name,
+             scales = "free") +
+  theme_bw()
+
+TS_product_deseason %>% 
+  mutate(depth_distance = depth - as.numeric(as.character(depth_int))) %>% 
+  ggplot(aes(date, value_deseason, col = depth_distance)) +
+  geom_point() +
+  scale_color_berlin() +
+  geom_smooth(method = "lm", se = FALSE, col = "red") +
+  geom_smooth(se = FALSE) +
+  facet_wrap(depth_int ~ name,
+             scales = "free") +
+  theme_bw()
+
+
+
+TS_product_deseason %>%
+  ggplot(aes(value_deseason, depth, col = date)) +
+  geom_point() +
+  scale_color_viridis_c(trans = "date") +
+  scale_y_continuous(trans = trans_reverser("sqrt"),
+                     breaks = depth_limits) +
+  facet_wrap( ~ name, scales = "free_x") +
+  theme_bw() +
+  theme(panel.grid.minor = element_blank())
+
+
+TS_product_deseason_annual <-
+  TS_product_deseason %>%
+  group_by(year, depth_int, name) %>%
+  summarise(annual_mean_deseason = mean(value_deseason)) %>%
+  ungroup() %>% 
+  mutate(depth_int = as.numeric(as.character(depth_int)))
+
+
+TS_product_deseason_annual %>%
+  ggplot(aes(annual_mean_deseason, depth_int, col = year, group=year)) +
+  geom_path() +
+  geom_point() +
+  scale_color_viridis_c() +
+  scale_y_continuous(trans = trans_reverser("sqrt"),
+                     breaks = depth_limits) +
+  facet_wrap( ~ name, scales = "free_x") +
+  theme_bw() +
+  theme(panel.grid.minor = element_blank())
+
+  
+TS_product_deseason_annual %>%
+  filter(name == "tco2") %>% 
+  ggplot(aes(year, depth_int, z = annual_mean_deseason)) +
+  geom_contour_filled() +
+  scale_fill_viridis_d(name = "tco2") +
+  scale_y_continuous(trans = trans_reverser("sqrt"),
+                     breaks = depth_limits) +
+  coord_cartesian(expand = 0)
+  
+TS_product_deseason_annual %>%
+  filter(name == "pH") %>% 
+  ggplot(aes(year, depth_int, z = annual_mean_deseason)) +
+  geom_contour_filled() +
+  scale_fill_viridis_d(name = "pH") +
+  scale_y_continuous(trans = trans_reverser("sqrt"),
+                     breaks = depth_limits) +
+  coord_cartesian(expand = 0)
+
+library(broom)
+regressions <- TS_product_deseason %>%
+  nest(data = -c(depth_int, name)) %>%
+  mutate(
+    fit = map(data, ~ lm(value_deseason ~ year, data = .x)),
+    tidied = map(fit, tidy),
+    glanced = map(fit, glance),
+    augmented = map(fit, augment)
+  )
+
+regressions %>%
+  unnest(tidied) %>%
+  mutate(depth_int = as.numeric(as.character(depth_int))) %>%
+  arrange(depth_int) %>% 
+  filter(term == "year") %>% 
+  ggplot(aes(estimate, depth_int)) +
+  geom_ribbon(aes(xmin = estimate - std.error,
+                  xmax = estimate + std.error,
+                  fill = "St. error")) +
+  geom_path() +
+  geom_point() +
+  scale_color_viridis_c() +
+  scale_y_continuous(trans = trans_reverser("sqrt"),
+                     breaks = depth_limits) +
+  facet_wrap(~ name, scales = "free_x") +
+  theme_bw() +
+  theme(panel.grid.minor = element_blank())
+
+
+
+rm(TS_product_consistent,
+   TS_product_season,
+   TS_product_stations,
+   TS_product_deseason,
+   TS_product_deseason_annual)
 
 ```
 
