--- a/analysis/average_OIA.Rmd
+++ b/analysis/average_OIA.Rmd
@@ -24,6 +24,9 @@ library(stars)
 library(seacarb)
 library(ggtext)
 library(ggnewscale)
+library(lubridate)
+library(ggrepel)
+library(broom)
 ```
 
 
@@ -43,6 +46,8 @@ path_preprocessing_model    <-
 
 path_reccap2 <-
   "/nfs/kryo/work/updata/reccap2/"
+
+path_ungrd_3d_ocn <- "/nfs/kryo/work/datasets/ungridded/interior/ocean"
 
 path_out <-   paste0(path_observations, "output_publication/")
 path_OIA <-   "/nfs/kryo/work/jenmueller/ocean_interior_acidification/"
@@ -638,91 +643,119 @@ rm(DIC_surface_trend,
 
 ## Time series stations
 
-```{r read_time_series_stations}
-
-library(lubridate)
-library(ggrepel)
-library(broom)
-
-path_ungrd_3d_ocn <- "/nfs/kryo/work/datasets/ungridded/interior/ocean"
+```{r read_SPOTS}
 
 col_names <-
   names(read_csv(
-    paste0(path_ungrd_3d_ocn, "/spots/TS_product.csv"),
+    paste0(path_ungrd_3d_ocn, "/spots/TS_product_20230619.csv"),
     n_max = 0
   ))
 
 TS_product <-
   read_csv(
-    paste0(path_ungrd_3d_ocn, "/spots/TS_product.csv"),
+    paste0(path_ungrd_3d_ocn, "/spots/TS_product_20230619.csv"),
     col_names = col_names,
     skip = 2
   )
 
 rm(col_names)
 
-TS_product <- TS_product %>% 
-  select(station = TimeSeriesStation,
-         station_nr = STNNBR,
-         date = DATE,
-         lat = LATITUDE,
-         lon = LONGITUDE,
-         depth = CTDPRS,
-         tco2 = TCARBN,
-         pH = PH_TOT,
-         PO4 = PHSPHT,
-         talk = ALKALI,
-         temp = CTDTMP)
+var_select <-
+  c("CTDSAL",
+    "CTDTMP",
+    "TCARBN",
+    "ALKALI",
+    # "PH_TOT",
+    "PHSPHT",
+    "SILCAT")
+
+TS_product <- TS_product %>%
+  select(
+    station = TimeSeriesStation,
+    station_nr = STNNBR,
+    date = DATE,
+    lat = LATITUDE,
+    lon = LONGITUDE,
+    depth = CTDPRS,
+    all_of(contains(var_select))
+  ) %>% 
+  select(-contains(c("_P", "_A")))
+
+for (i_var in var_select) {
+  # i_var <- "CTDTMP"
+  
+  i_TS_product <- TS_product %>%
+    select(station:depth,
+           all_of(contains(i_var)))
+  
+  i_TS_product <- i_TS_product %>%
+    filter(!!sym(i_var) != -999)
+
+  if (i_var != "CTDTMP" & i_var != "CTDSAL") {
+    i_TS_product <- i_TS_product %>%
+      filter(!!sym(paste0(i_var, "_FLAG_W")) == 2,
+             !!sym(paste0(i_var, "_BPf")) == 1)
+  }
+  
+  if (i_var == "CTDSAL") {
+    i_TS_product <- i_TS_product %>%
+      filter(!!sym(paste0(i_var, "_FLAG_W")) == 2)
+  }
+  
+  i_TS_product <- i_TS_product %>%
+    select(station:depth, all_of(i_var)) %>% 
+    mutate(name = i_var) %>% 
+    rename(value = all_of(i_var))
+  
+  
+  if (exists("TS_product_all")) {
+    TS_product_all <-
+      bind_rows(TS_product_all,
+                i_TS_product)
+  }
+  
+  if (!exists("TS_product_all")) {
+    TS_product_all <- i_TS_product
+  }
+  
+}
+
+TS_product <- TS_product_all
+rm(i_var, i_TS_product, TS_product_all)
+
+TS_product <- TS_product %>%
+  mutate(
+    name = case_when(
+      name ==  "CTDTMP" ~ "temp",
+      name ==  "CTDSAL" ~ "sal",
+      name ==  "TCARBN" ~ "tco2",
+      name ==  "ALKALI" ~ "talk",
+      name ==  "PH_TOT" ~ "pH",
+      name ==  "PHSPHT" ~ "PO4",
+      name ==  "SILCAT" ~ "Si"
+    )
+  )
+
+TS_product %>% 
+  distinct(name)
+
+
+TS_product <- TS_product %>%
+  mutate(
+    date = as.Date(as.character(date), "%Y%m%d"),
+    year = year(date),
+    month = month(date)
+  )
 
 TS_product <- TS_product %>% 
   mutate(lon = if_else(lon < 20, lon + 360, lon))
 
-TS_product <- TS_product %>% 
-  pivot_longer(tco2:temp) %>% 
-  filter(value != -999)
-
-TS_product_stations <- 
-TS_product %>% 
-  group_by(station) %>%
-  summarise(lat = mean(lat),
-            lon = mean(lon),
-            n = n()) %>% 
-  ungroup()
-
-
-map +
-  geom_point(data = TS_product_stations,
-             aes(lon, lat, size = n),
-             alpha = 0.5,
-             col = "red") +
-  geom_label_repel(data = TS_product_stations,
-             aes(lon, lat, label = station),
-             size = 3,
-             label.padding = 0.2,
-             min.segment.length = 0)
-
-TS_product <-
+ALOHA <-
   TS_product %>%
   filter(station == "ALOHA")
 
-
-TS_product <-
-TS_product %>% 
-  mutate(date = as.Date(as.character(date), "%Y%m%d"),
-         year = year(date),
-         month = month(date))
-
-TS_product %>% 
-  arrange(depth) %>% 
-  mutate(n_row = row_number()) %>% 
-  ggplot(aes(n_row,depth)) +
-  geom_point() + 
-  coord_cartesian(ylim = c(100,700)) +
-  theme_bw()
-
-
-TS_product %>%
-  filter(between(depth,4450,4550)) %>% 
+ALOHA %>%
+  filter(between(depth,400,700)) %>% 
   ggplot(aes(value, depth, col = year)) +
   geom_point(alpha = 0.4) +
   scale_color_viridis_c() +
@@ -741,15 +774,22 @@ depth_labels_deep <- c(600,NA,  1020, NA,  2000,NA,   3000,NA,   4500)
 depth_limits <- c(depth_limits_shallow, depth_limits_deep)
 depth_labels <- c(depth_labels_shallow, depth_labels_deep)
 
-TS_product <-
-  TS_product %>%
+ALOHA <-
+  ALOHA %>%
   mutate(depth_int = cut(depth, depth_limits, depth_labels))
 
 rm(depth_limits_shallow, depth_limits_deep,
    depth_labels_shallow, depth_labels_deep)
 
 
-TS_product %>% 
+# ALOHA %>% 
+#   filter(depth_int == 600,
+#          name == "talk") %>% 
+#   ggplot(aes(date, depth)) +
+#   geom_path() +
+#   geom_point()
+
+ALOHA %>% 
   arrange(depth) %>% 
   mutate(n_row = row_number()) %>% 
   ggplot(aes(n_row,depth,col=depth_int)) +
@@ -757,16 +797,19 @@ TS_product %>%
   theme_bw()
 
 
-TS_product %>%
-  ggplot(aes(value, depth, col = depth_int)) +
-  geom_point(alpha = 0.4) +
-  scale_y_continuous(trans = trans_reverser("sqrt")) +
+ALOHA %>%
+  filter(between(depth,990,1510)) %>% 
+  ggplot(aes(value, depth, col = depth_int, fill = year)) +
+  geom_point(alpha = 0.4, shape = 21) +
+  scale_y_reverse() +
+  scale_fill_viridis_c() +
+  # scale_y_continuous(trans = trans_reverser("sqrt")) +
   facet_wrap( ~ name, scales = "free_x") +
   theme_bw() +
   theme(panel.grid.minor = element_blank())
 
 
-TS_product %>%
+ALOHA %>%
   ggplot(aes(value, depth, col = date)) +
   geom_point() +
   scale_color_viridis_c(trans = "date") +
@@ -776,24 +819,315 @@ TS_product %>%
   theme_bw() +
   theme(panel.grid.minor = element_blank())
 
-TS_product <-
-  TS_product %>%
+ALOHA <-
+  ALOHA %>%
+  mutate(depth_int = as.numeric(as.character(depth_int)))
+
+ALOHA %>%
+  ggplot(aes(value, depth)) +
+  geom_point(col = "grey70") +
+  geom_point(data = . %>% filter(!is.na(depth_int)),
+             aes(col = date)) +
+  scale_color_viridis_c(trans = "date") +
+  scale_y_continuous(trans = trans_reverser("sqrt"),
+                     breaks = depth_labels) +
+  facet_wrap( ~ name, scales = "free_x") +
+  theme_bw() +
+  labs(title = "Selected data") +
+  theme(panel.grid.minor = element_blank())
+
+ALOHA %>%
+  ggplot(aes(value, depth)) +
+  geom_point(col = "grey70") +
+  geom_point(data = . %>% filter(is.na(depth_int)),
+             aes(col = date)) +
+  scale_color_viridis_c(trans = "date") +
+  scale_y_continuous(trans = trans_reverser("sqrt"),
+                     breaks = depth_labels) +
+  facet_wrap( ~ name, scales = "free_x") +
+  theme_bw() +
+  labs(title = "Discarded data") +
+  theme(panel.grid.minor = element_blank())
+
+ALOHA <-
+  ALOHA %>%
+  filter(!is.na(depth_int))
+
+rm(TS_product)
+
+```
+
+```{r read_BATS}
+
+col_names <-
+  read_delim(
+    paste0(path_ungrd_3d_ocn, "/bats/bats_bottle.txt"),
+    delim = ",",
+    skip = 58,
+    n_max = 0,
+    trim_ws = TRUE
+  ) %>%
+  names()
+
+bats_bottle <- read_delim(
+  paste0(path_ungrd_3d_ocn, "/bats/bats_bottle.txt"),
+  delim = "\t",
+  col_names = col_names,
+  skip = 59,
+  trim_ws = TRUE)
+
+rm(col_names)
+
+bats_bottle <- bats_bottle %>% 
+  select(station_nr = Id,
+         date = yyyymmdd,
+         lat = latN,
+         lon = lonW,
+         depth = Depth,
+         temp = Temp,
+         sal = CTD_S,
+         tco2 = CO2,
+         talk = Alk,
+         PO4 = PO41,
+         Si = Si1,
+         QF) %>% 
+  mutate(station = "BATS")
+
+
+bats_bottle <- bats_bottle %>% 
+  filter(QF == 2) %>% 
+  select(-QF)
+
+bats_bottle <- bats_bottle %>% 
+  pivot_longer(temp:Si) %>% 
+  filter(value != -999)
+
+bats_bottle <-
+  bats_bottle %>%
+  mutate(
+    date = as.Date(as.character(date), "%Y%m%d"),
+    year = year(date),
+    month = month(date)
+  )
+
+bats_bottle <-
+  bats_bottle %>%
+  mutate(lon = -lon,
+         lon = if_else(lon < 20, lon + 360, lon))
+
+bats_bottle %>%
+  filter(between(depth,0,750)) %>% 
+  ggplot(aes(value, depth, col = year)) +
+  geom_point(alpha = 0.4) +
+  scale_color_viridis_c() +
+  scale_y_reverse() +
+  # scale_y_continuous(trans = trans_reverser("sqrt")) +
+  facet_wrap( ~ name, scales = "free_x") +
+  theme_bw() +
+  theme(panel.grid.minor = element_blank())
+
+depth_limits_shallow <- c(0,7.5,12.5, 17.5,22.5, 37.5,42.5, 57.5,62.5, 77.5,82.5, 97.5,102.5)
+depth_labels_shallow <- c(3,10,NA,    20,NA,     40,NA,     60,NA,     80,NA,     100,NA) 
+
+depth_limits_mid <- c(115,125, 135,145, 155,165, 190,210, 240,260, 290,310, 390,410)
+depth_labels_mid <- c(120,NA,  140,NA,  160,NA,  200,NA,  250,NA,  300,NA,  400,NA) 
+
+depth_limits_deep_1000 <- c(490,510, 590,610, 690,710, 790,810, 890,910, 990,1010)
+depth_labels_deep_1000 <- c(500,NA,  600,NA,  700,NA,  800,NA,  800,NA,  1000,NA) 
+
+depth_limits_deep_2000 <- c(1080,1120, 1180,1220, 1280,1320, 1380,1420, 1580,1620, 1780,1820, 1980,2020)
+depth_labels_deep_2000 <- c(1100,NA,   1200,NA,   1300,NA,   1400,NA,   1600,NA,   1800,NA,   2000,NA) 
+
+depth_limits_deep_4000 <- c(2180,2220, 2380,2420, 2580,2620, 2980,3020, 3380,3420, 3780,3820, 3980,4020)
+depth_labels_deep_4000 <- c(2200,NA,   2400,NA,   2600,NA,   3000,NA,  3400,NA,   3800,NA,   4000,NA) 
+
+depth_limits_deep_5000 <- c(4180,4220, 4490,4570)
+depth_labels_deep_5000 <- c(4200,NA,   4520) 
+
+depth_limits <-
+  c(
+    depth_limits_shallow,
+    depth_limits_mid,
+    depth_limits_deep_1000,
+    depth_limits_deep_2000,
+    depth_limits_deep_4000,
+    depth_limits_deep_5000
+  )
+
+depth_labels <-
+  c(
+    depth_labels_shallow,
+    depth_labels_mid,
+    depth_labels_deep_1000,
+    depth_labels_deep_2000,
+    depth_labels_deep_4000,
+    depth_labels_deep_5000
+  )
+
+bats_bottle <-
+  bats_bottle %>%
+  mutate(depth_int = cut(depth, depth_limits, depth_labels))
+
+
+rm(
+  depth_limits_shallow,
+  depth_limits_mid,
+  depth_limits_deep_1000,
+  depth_limits_deep_2000,
+  depth_limits_deep_4000,
+  depth_limits_deep_5000
+)
+
+rm(
+  depth_labels_shallow,
+  depth_labels_mid,
+  depth_labels_deep_1000,
+  depth_labels_deep_2000,
+  depth_labels_deep_4000,
+  depth_labels_deep_5000
+)
+
+bats_bottle %>%
+  filter(between(depth,0,100)) %>% 
+  ggplot(aes(value, depth, col = depth_int)) +
+  geom_point(alpha = 0.4) +
+  scale_y_continuous(trans = trans_reverser("sqrt")) +
+  facet_wrap( ~ name, scales = "free_x") +
+  theme_bw() +
+  theme(panel.grid.minor = element_blank())
+
+
+bats_bottle %>%
+  ggplot(aes(value, depth, col = date)) +
+  geom_point() +
+  scale_color_viridis_c(trans = "date") +
+  scale_y_continuous(trans = trans_reverser("sqrt"),
+                     breaks = depth_labels) +
+  facet_wrap( ~ name, scales = "free_x") +
+  theme_bw() +
+  theme(panel.grid.minor = element_blank())
+
+bats_bottle <-
+  bats_bottle %>%
   mutate(depth_int = as.numeric(as.character(depth_int))) %>%
   filter(!is.na(depth_int))
 
+```
 
+```{r trend_analysis_observations}
+
+
+TS_product <-
+  bind_rows(ALOHA,
+            bats_bottle)
+
+bats_bottle %>% 
+  filter(depth_int == 600, name == "tco2") %>% 
+  ggplot(aes(date, depth)) +
+  geom_point()
+
+TS_product <- TS_product %>%
+  group_by(across(-value)) %>%
+  summarise(value = mean(value, na.rm = TRUE)) %>%
+  ungroup() %>%
+  pivot_wider(names_from = name,
+              values_from = value) %>%
+  filter(!is.na(tco2),
+         !is.na(talk),
+         !is.na(sal),
+         !is.na(temp)) 
+
+
+TS_product_stations <- 
 TS_product %>% 
-  ggplot(aes(date, value, fill=depth_int-depth)) +
-  geom_point(shape = 21) +
-  scale_fill_continuous_divergingx() +
-  geom_smooth(method = "lm", se = FALSE) +
-  facet_wrap(depth_int ~ name,
-             scales = "free") +
-  theme_bw()
+  group_by(station) %>%
+  summarise(lat = mean(lat),
+            lon = mean(lon),
+            n = n()) %>% 
+  ungroup()
 
-library(broom)
+map +
+  geom_point(data = TS_product_stations,
+             aes(lon, lat, size = n),
+             alpha = 0.5,
+             col = "red") +
+  geom_label_repel(data = TS_product_stations,
+             aes(lon, lat, label = station),
+             size = 3,
+             label.padding = 0.2,
+             min.segment.length = 0) +
+  scale_size_area()
+
+TS_product <-
+  TS_product %>%
+  # head(10) %>%
+  mutate(
+    sir(
+      flag = 15,
+      var1 = talk * 1e-6,
+      var2 = tco2 * 1e-6,
+      S = sal,
+      T = temp,
+      P = depth / 10,
+      # Pt = phosphate * 1e-6,
+      # Sit = silicate * 1e-6,
+      k1k2 = "s20",
+      kf = "dg",
+      pHscale = "T"
+    )[c(6, 18, 20, 21)]
+  )
+
+TS_product <-
+  TS_product %>%
+  mutate(H_free = 1e3 * H_free)
+
+TS_product <-
+  TS_product %>%
+  pivot_longer(PO4:H_free)
+
+
+date_range <-
+  c(min(TS_product$date),
+    max(TS_product$date))
+
+
+pdf(
+  here::here("output/all_variables/BATS_HOTS_time_series.pdf"),
+  width = 14,
+  height = 8
+)
+
+TS_product %>%
+  arrange(date) %>% 
+  group_by(depth_int, station) %>%
+  group_split() %>%
+  # head(1) %>%
+  map(
+    ~ ggplot(data = .x,
+             aes(date, value)) +
+      geom_path() +
+      geom_point(aes(fill = depth_int - depth),
+                 shape = 21,
+                 alpha = 0.5) +
+      labs(title = paste(.x$station, "|", .x$depth_int,"m")) +
+      scale_fill_continuous_divergingx(
+        name = "Vertical distance\nfrom depth centre (m)"
+      ) +
+      scale_x_date(limits = date_range) +
+      geom_smooth(method = "lm", se = FALSE, col = "black") +
+      # geom_smooth(se = FALSE, col = "grey60") +
+      facet_wrap(. ~ name,
+                 scales = "free",
+                 ncol = 3) +
+      theme(axis.title = element_blank(),
+            legend.position = c(0.6,0.1),
+            legend.direction = "horizontal")
+  )
+
+dev.off()
+
 detrended <- TS_product %>%
-  nest(data = -c(depth_int, name)) %>%
+  nest(data = -c(depth_int, station, name)) %>%
   mutate(
     fit = map(data, ~ lm(value ~ date, data = .x)),
     tidied = map(fit, tidy),
@@ -803,23 +1137,45 @@ detrended <- TS_product %>%
 
 detrended <-
   detrended %>%
-  unnest(c(data, augmented), names_repair = "universal") %>% 
-  select(name, depth_int, date = date...5, year, month, value = value...9, value_detrended = .resid)
+  unnest(augmented) %>% 
+  select(station, name, depth_int, date, value, value_detrended = .resid)
 
-detrended %>% 
-  ggplot(aes(date, value_detrended)) +
-  geom_point(alpha=0.4) +
-  geom_smooth(method = "lm", se = FALSE) +
-  facet_wrap(depth_int ~ name,
-             scales = "free") +
-  theme_bw()
+detrended <-
+  detrended %>%
+  mutate(year = year(date),
+         month = month(date))
 
+detrended <-
+  detrended %>%
+  arrange(station, date)
+
+pdf(
+  here::here("output/all_variables/BATS_HOTS_time_series_detrended.pdf"),
+  width = 14,
+  height = 8
+)
 
 detrended %>%
-  ggplot() +
-  geom_point(aes(month, value_detrended, col = date), alpha = 0.5) +
-  scale_color_viridis_c(trans = "date") +
-  facet_wrap(depth_int ~ name, scales = "free_y")
+  group_by(depth_int, station) %>%
+  group_split() %>%
+  # head(1) %>%
+  map(
+    ~ ggplot(data = .x,
+             aes(date, value_detrended)) +
+      geom_path() +
+      geom_point(shape = 21,
+                 fill = "black",
+                 alpha = 0.2) +
+      labs(title = paste(.x$station, "|", .x$depth_int,"m")) +
+      # geom_smooth(se = FALSE, col = "grey60") +
+      geom_smooth(method = "lm", se = FALSE, col = "black") +
+      facet_wrap(. ~ name,
+                 scales = "free",
+                 ncol = 3)
+  )
+
+dev.off()
+
 
 detrended <-
   detrended %>%
@@ -828,81 +1184,216 @@ detrended <-
          median = median(value_detrended)) %>%
   ungroup()
   
+
+
+pdf(
+  here::here("output/all_variables/BATS_HOTS_detrended_monthly_climatology.pdf"),
+  width = 14,
+  height = 8
+)
+
+
 detrended %>%
-  ggplot() +
-  geom_point(aes(month, value_detrended), alpha = 0.2) +
-  geom_point(aes(month, mean, fill = "Monthly mean"),
-             shape = 21,
-             size = 2) +
-  geom_point(aes(month, median, fill = "Monthly median"),
-             shape = 21,
-             size = 2) +
-  facet_wrap(depth_int ~ name, scales = "free_y")
+  group_by(depth_int, station) %>%
+  group_split() %>%
+  # head(1) %>%
+  map(
+    ~ ggplot(data = .x) +
+      # geom_path(aes(month, value_detrended, group = year), col="grey80") +
+      geom_point(aes(month, value_detrended), alpha = 0.2) +
+      geom_point(
+        aes(month, mean, fill = "Monthly mean"),
+        shape = 21,
+        size = 2
+      ) +
+      geom_point(
+        aes(month, median, fill = "Monthly median"),
+        shape = 21,
+        size = 2
+      ) +
+      labs(title = paste(.x$station, "|", .x$depth_int, "m")) +
+      scale_x_continuous(breaks = seq(1, 12, 3)) +
+      theme(legend.title = element_blank()) +
+      facet_wrap(~ name, scales = "free_y", ncol = 3) +
+      theme(
+        legend.position = c(0.6, 0.1)
+      )
+  )
+
+dev.off()
 
 
 detrended <-
   detrended %>%
   mutate(value_deseason = value - mean)
 
-detrended %>% 
-  ggplot(aes(date, value_deseason)) +
-  geom_point() +
-  geom_smooth(method = "lm", se = FALSE) +
-  facet_wrap(depth_int ~ name,
-             scales = "free") +
-  theme_bw()
+
+
+pdf(
+  here::here(
+    "output/all_variables/BATS_HOTS_time_series_deasonalized.pdf"
+  ),
+  width = 14,
+  height = 8
+)
+
+
+detrended %>%
+  group_by(depth_int, station) %>%
+  group_split() %>%
+  # head(1) %>%
+  map(
+    ~ ggplot(data = .x) +
+      geom_path(aes(date, value,
+                    col = "measured")) +
+      geom_point(
+        aes(date, value,
+            fill = "measured"),
+        shape = 21,
+        alpha = 0.2
+      ) +
+      geom_path(aes(date, value_deseason,
+                    col = "deseasonalized")) +
+      geom_point(
+        aes(date, value_deseason,
+            fill = "deseasonalized"),
+        shape = 21,
+        alpha = 0.2
+      ) +
+      geom_smooth(
+        aes(date, value, col = "measured"),
+        method = "lm",
+        se = FALSE
+      ) +
+      geom_smooth(
+        aes(date, value_deseason, col = "deseasonalized"),
+        method = "lm",
+        se = FALSE
+      ) +
+      scale_color_manual(values = c("red", "grey"), name = "") +
+      scale_fill_manual(values = c("red", "grey"), name = "") +
+      labs(title = paste(.x$station, "|", .x$depth_int, "m")) +
+      facet_wrap(. ~ name,
+                 scales = "free",
+                 ncol = 3) +
+      scale_x_date(limits = date_range) +
+      theme(
+        axis.title = element_blank(),
+        legend.title = element_blank(),
+        legend.position = c(0.6, 0.1)
+      )
+  )
+
+dev.off()
+
 
 detrended %>%
   ggplot(aes(value_deseason, depth_int, col = date)) +
   geom_point() +
   scale_color_viridis_c(trans = "date") +
-  scale_y_continuous(trans = trans_reverser("sqrt"),
-                     breaks = depth_labels) +
-  facet_wrap( ~ name, scales = "free_x") +
-  theme_bw() +
-  theme(panel.grid.minor = element_blank())
-
+  scale_y_continuous(trans = trans_reverser("sqrt")) +
+  facet_grid(station ~ name, scales = "free_x")
 
 detrended_annual <-
   detrended %>%
-  group_by(year, depth_int, name) %>%
-  summarise(annual_mean_deseason = mean(value_deseason)) %>%
+  group_by(station, year, depth_int, name) %>%
+  summarise(value_deseason = mean(value_deseason)) %>%
+  ungroup() %>% 
+  mutate(depth_int = as.numeric(as.character(depth_int)))
+
+detrended <-
+  detrended %>%
+  group_by(station, year, depth_int, name) %>%
+  mutate(value_deseason_annual = mean(value_deseason)) %>%
   ungroup() %>% 
   mutate(depth_int = as.numeric(as.character(depth_int)))
 
 
+
+pdf(
+  here::here(
+    "output/all_variables/BATS_HOTS_time_series_deasonalized_annual.pdf"
+  ),
+  width = 14,
+  height = 8
+)
+
+
+detrended %>%
+  group_by(depth_int, station) %>%
+  group_split() %>%
+  # head(1) %>%
+  map(
+    ~ ggplot(data = .x) +
+      geom_path(aes(date, value_deseason,
+                    col = "deseasonalized")) +
+      geom_point(
+        aes(date, value_deseason,
+            fill = "deseasonalized"),
+        shape = 21,
+        alpha = 0.2
+      ) +
+      geom_path(aes(date, value_deseason_annual,
+                    col = "deseasonalized annual mean")) +
+      geom_point(
+        aes(date, value_deseason_annual,
+            fill = "deseasonalized annual mean"),
+        shape = 21,
+        alpha = 0.2
+      ) +
+      geom_smooth(aes(date, value_deseason, col = "deseasonalized"),
+                  method = "lm",
+                  se = FALSE)+
+      geom_smooth(
+        aes(date, value_deseason_annual, col = "deseasonalized annual mean"),
+        method = "lm",
+        se = FALSE
+      ) +
+      scale_color_manual(values = c("grey", "red"), name = "") +
+      scale_fill_manual(values = c("grey", "red"), name = "") +
+      labs(title = paste(.x$station, "|", .x$depth_int, "m")) +
+      facet_wrap(. ~ name,
+                 scales = "free",
+                 ncol = 3) +
+      scale_x_date(limits = date_range) +
+      theme(
+        axis.title = element_blank(),
+        legend.title = element_blank(),
+        legend.position = c(0.6, 0.1)
+      )
+  )
+
+dev.off()
+
+
 detrended_annual %>%
-  ggplot(aes(annual_mean_deseason, depth_int, col = year, group=year)) +
+  ggplot(aes(value_deseason, depth_int, col = year, group=year)) +
   geom_path() +
   geom_point() +
   scale_color_viridis_c() +
-  scale_y_continuous(trans = trans_reverser("sqrt"),
-                     breaks = depth_limits) +
-  facet_wrap( ~ name, scales = "free_x") +
-  theme_bw() +
-  theme(panel.grid.minor = element_blank())
-
+  scale_y_continuous(trans = trans_reverser("sqrt")) +
+  facet_grid(station ~ name, scales = "free_x")
   
 detrended_annual %>%
   filter(name == "tco2") %>% 
-  ggplot(aes(year, depth_int, z = annual_mean_deseason)) +
+  ggplot(aes(year, depth_int, z = value_deseason)) +
   geom_contour_filled() +
   scale_fill_viridis_d(name = "tco2") +
-  scale_y_continuous(trans = trans_reverser("sqrt"),
-                     breaks = depth_labels) +
-  coord_cartesian(expand = 0)
+  scale_y_continuous(trans = trans_reverser("sqrt")) +
+  coord_cartesian(expand = 0) +
+  facet_wrap(~ station)
   
 detrended_annual %>%
   filter(name == "pH") %>% 
-  ggplot(aes(year, depth_int, z = annual_mean_deseason)) +
+  ggplot(aes(year, depth_int, z = value_deseason)) +
   geom_contour_filled() +
   scale_fill_viridis_d(name = "pH") +
-  scale_y_continuous(trans = trans_reverser("sqrt"),
-                     breaks = depth_labels) +
-  coord_cartesian(expand = 0)
+  scale_y_continuous(trans = trans_reverser("sqrt")) +
+  coord_cartesian(expand = 0) +
+  facet_wrap(~ station)
 
-regressions <- detrended %>%
-  nest(data = -c(depth_int, name)) %>%
+regressions <- detrended_annual %>%
+  nest(data = -c(station, depth_int, name)) %>%
   mutate(
     fit = map(data, ~ lm(value_deseason ~ year, data = .x)),
     tidied = map(fit, tidy),
@@ -910,32 +1401,44 @@ regressions <- detrended %>%
     augmented = map(fit, augment)
   )
 
+TS_trends <- 
 regressions %>%
   unnest(tidied) %>%
-  arrange(depth_int) %>% 
-  filter(term == "year") %>% 
+  arrange(depth_int) %>%
+  filter(term == "year",
+         depth_int <= 3000)
+
+
+
+TS_trends %>%
   ggplot(aes(estimate, depth_int)) +
-  geom_ribbon(aes(xmin = estimate - std.error,
-                  xmax = estimate + std.error,
-                  fill = "St. error")) +
-  geom_path() +
-  geom_point() +
-  scale_color_viridis_c() +
-  scale_y_continuous(trans = trans_reverser("sqrt"),
-                     breaks = depth_labels) +
-  facet_wrap(~ name, scales = "free_x") +
-  theme_bw() +
-  theme(panel.grid.minor = element_blank())
+  geom_vline(xintercept = 0) +
+  geom_ribbon(aes(
+    xmin = estimate - std.error,
+    xmax = estimate + std.error,
+    fill = station
+  ),
+  alpha = 0.5) +
+  geom_path(aes(col = station)) +
+  scale_y_reverse(breaks = seq(0, 3000, 500)) +
+  scale_fill_brewer(palette = "Dark2") +
+  scale_color_brewer(palette = "Dark2") +
+  labs(y = "Depth (m)",
+       x = "Long term trend") +
+  # scale_y_continuous(trans = trans_reverser("sqrt")) +
+  coord_cartesian(expand = 0, ylim = c(3000, 0)) +
+  facet_wrap( ~ name, scales = "free_x",
+              ncol = 3) +
+  theme(legend.position = c(0.6, 0.1))
 
-
-
-rm(TS_product,
-   TS_product_stations,
-   detrended,
-   detrended_annual,
-   detrended_season)
+ggsave(
+  here::here("output/all_variables/BATS_HOTS_annual_mean_trend_profile.pdf"),
+  width = 8,
+  height = 14
+)
 
 ```
+
 
 
 # Ocean volume grids
